# capstone-project

./: CMakeLists.txt  MidiDispatch.cpp  MidiDispatch.h  config.h.in  main.cpp  midi.cpp  midi.h  timing.h
lib/: CMakeLists.txt
lib/rtmidi-4.0.0/: CMakeLists.txt  RtMidi.h
lib/timing/: CMakeLists.txt  timing.h
src/: CMakeLists.txt  midi-test.cpp  ui-test.cpp
src/midi/: MidiDispatch.cpp  MidiDispatch.h
